--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="wrap" id="wrap">
-    <img class="poster" src="./poster.jpg" alt="邀请函海报" />
+    <img class="poster" src="./birthday.png" alt="邀请函海报" />
     <div class="corner" id="btn">🔊 播放音乐</div>
     <div class="tip" id="tip">提示：点击任意位置开启音乐</div>
   </div>
